# quantshield

./: .gitignore  ActorCriticMath.md  Methodology.md  README.md  pyproject.toml  requirements-app.txt  requirements-rl.txt  requirements.txt
config/: broad_universe_config.yaml  default_config.yaml
data/raw/treasury_rates/: daily_treasury_yield_curve_202106.csv  daily_treasury_yield_curve_202305.csv  daily_treasury_yield_curve_202504.csv  daily_treasury_yield_curve_202505.csv  (+2 more)
notebooks/: exploratory_analysis.ipynb  portfolio_demo.ipynb
outputs/ml_tuned_objective_runs/: tuned_objective_comparison.csv
outputs/model_experiments/: benchmark_beating_duration_summary_20260409_013943.csv  model_scoreboard.csv  oracle_memory_summary_20260409_015651.csv
outputs/replay_checkpoint_suites/: model_scoreboard.csv
outputs/tuned_objective_runs/: tuned_objective_comparison.csv
scripts/: _common.py  build_oracle_memory_models.py  fetch_data.py  fit_portfolio_model.py  run_backtest.py  run_desktop_app.py  run_ml_pipeline.py  run_pipeline.py  run_tuned_suite.py  score_saved_models.py  train_benchmark_beating_duration_models.py  train_duration_checkpoint_suites.py  train_random_sp500_policy.py  train_rl_policy.py
src/quantshield/: __init__.py  attribution.py  backtest.py  config.py  data_loader.py  metrics.py  model_scoring.py  notebook_analysis.py  optimization.py  pipeline.py  plotting.py  preprocessing.py  replay_durations.py  reporting.py  risk.py  rl.py  sp500_random_training.py  stress_test.py  training_logging.py  training_targets.py  tuned_suite.py  universe.py  utils.py
src/quantshield_app/: __init__.py  clyde_gate.py  main.py
tests/: conftest.py  test_clyde_gate.py  test_data_loader.py  test_desktop_app.py  test_metrics.py  test_optimization.py  test_risk.py  test_rl.py  test_sp500_random_training.py
(+1598 files in other folders)
