[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantshield"
version = "0.1.0"
description = "Transformer actor-critic portfolio policy project with a PySide6 desktop inference app, built on locally fetched yfinance data and constrained benchmark demonstrations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "QuantShield" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "Pillow>=10.0",
  "yfinance>=0.2.54",
  "lxml>=5.3",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
desktop = [
  "PySide6>=6.8"
]
rl = [
  "torch>=2.5"
]
app = [
  "PySide6>=6.8",
  "torch>=2.5"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
